fix menu adding z-index and positioning

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body{
   margin-top: calc(100vw/8);
   margin-right: 20px;
   position: absolute;
+  z-index: 1;
 }
 
 .tag{
@@ -201,15 +202,13 @@ img{
   color: white;
   text-decoration: none;
   font-size: 2rem;
+  z-index: 2;
+  position: relative;
 }
 
 .nav li{
   margin-bottom: calc(100vw/60);
 }
-
-/* .navbar:hover{
-  color: #37F218;
-} */
 
 .burger {
   /* width: 30px; */
